--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,31 @@
 name: cat_breeds
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
   sdk: ^3.7.2
 
 dependencies:
+  build_runner: ^2.5.4
+  dio: ^5.8.0+1
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.2.1
+  flutter_riverpod: ^2.6.1
+  freezed: ^3.0.6
+  freezed_annotation: ^3.0.0
+  go_router: ^15.2.4
+  json_annotation: ^4.9.0
+  json_serializable: ^6.9.5
 
 dev_dependencies:
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - .env
