--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,14 +26,17 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
+  test: ^1.25.15
 
 flutter_native_splash:
   android: true
   ios: true
-  background_image: "assets/cat_breeds.png"
+  image: "assets/cat_breeds.png"
+  color: "#a6a6a6"
 
   android_12:
-    background_image: "assets/cat_breeds.png"
+    image: "assets/cat_breeds.png"
+    color: "#a6a6a6"
 
 flutter:
   uses-material-design: true
